--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "login-client"
+name = "work-tracker"
 version = "0.1.0"
-authors = ["wagnrd"]
 edition = "2021"
 
 [dependencies]
-relm4 = { version = "0.6.0-beta.1", features = ["libadwaita", "gnome_44"] }
-relm4-components = "0.6.0-beta.1"
+relm4 = { version = "0.6.0", features = ["libadwaita"] }
+relm4-components = "0.6.0"
