fix test build pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust
         uses: actions-rs/toolchain@v1.0.6
+        with:
+          toolchain: stable
       - name: Install dependencies
         run: sudo apt install libgtk-4-dev build-essential libadwaita-1-dev
       - name: Build
@@ -27,6 +29,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust
         uses: actions-rs/toolchain@v1.0.6
+        with:
+          toolchain: stable
       - name: Install dependencies
         run: brew install gtk4 libadwaita
       - name: Build
