--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
 
-name: Build
+name: Build and release
 jobs:
   build-linux:
     name: Build for Linux
@@ -14,6 +14,11 @@ jobs:
         run: sudo apt install libgtk-4-dev build-essential libadwaita-1-dev
       - name: Build
         run: cargo build -r
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: v0.1
+          files: ./target/release/work-tracker
 
   build-macos:
     name: Build for macOS
@@ -24,3 +29,8 @@ jobs:
         run: brew install gtk4 libadwaita
       - name: Build
         run: cargo build -r
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: v0.1
+          files: ./target/release/work-tracker
