--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,12 +22,11 @@ jobs:
       - name: Build
         run: cargo build -r
       - name: Release
+        if: startsWith(github.ref, 'refs/tags/')
+        run: mv ./target/release/work-tracker ./target/release/work-tracker-linux
         uses: softprops/action-gh-release@v1
         with:
-          name: v0.1
-          tag_name: v0.1
-          body: A test build. Can be ignored.
-          files: ./target/release/work-tracker
+          files: ./target/release/work-tracker-linux
 
   build-macos:
     name: Build for macOS
@@ -44,9 +43,8 @@ jobs:
       - name: Build
         run: cargo build -r
       - name: Release
+        if: startsWith(github.ref, 'refs/tags/')
+        run: mv ./target/release/work-tracker ./target/release/work-tracker-macos
         uses: softprops/action-gh-release@v1
         with:
-          name: v0.1
-          tag_name: v0.1
-          body: A test build. Can be ignored.
-          files: ./target/release/work-tracker
+          files: ./target/release/work-tracker-macos
