disable linux build since it doesn't work

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
 name: Build and release
 jobs:
   build-linux:
+    if: false
     name: Build for Linux
     runs-on: ubuntu-latest
     steps:
@@ -17,9 +18,8 @@ jobs:
           profile: minimal
           toolchain: stable
       - name: Install dependencies
-        run: sudo apt install libglib2.0-dev libgtk-4-dev build-essential libadwaita-1-dev
+        run: sudo apt install libgtk-4-dev build-essential libadwaita-1-dev
       - run: find /usr | grep libglib-2.0
-      - run: find /usr | grep libglib2.0
       - name: Build
         run: |
           cargo build -r
