add wip time picker

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,6 @@ jobs:
           toolchain: stable
       - name: Install dependencies
         run: sudo apt install libgtk-4-dev build-essential libadwaita-1-dev
-      - run: find /usr | grep libglib-2.0
       - name: Build
         run: |
           cargo build -r
@@ -31,7 +30,7 @@ jobs:
           files: ./target/release/work-tracker-linux
 
   build-macos:
-    if: false
+    if: true
     name: Build for macOS
     runs-on: macos-latest
     steps:
