--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.26"
+num = "0.4.0"
+once_cell = "1.18.0"
+regex = "1.8.4"
 relm4 = { version = "0.6.0", features = ["libadwaita"] }
 relm4-components = "0.6.0"
