--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ chrono = "0.4.26"
 num = "0.4.0"
 once_cell = "1.18.0"
 regex = "1.8.4"
-relm4 = { version = "0.6.0", features = ["libadwaita"] }
+relm4 = { version = "0.6.0", features = ["libadwaita", "gnome_44", "gnome_43", "gnome_42"] }
 relm4-components = "0.6.0"
