--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   build-linux:
     name: Build for Linux
     runs-on: ubuntu-latest
-    container: fedora-latest
+    container: fedora:latest
     steps:
       - uses: actions/checkout@v3
       - name: Install Rust
